--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,4 +13,7 @@
     <servlet-name>com.cmpe275.OnlineOrdering</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  <!-- >welcome-file-list>
+        <welcome-file>AddMenuItem.jsp</welcome-file>
+    </welcome-file-list-->
 </web-app>
