--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>${spring.version}</version>
+			<version>3.2.8.RELEASE</version>
 		</dependency>
 
 		<dependency>
